--- a/portfolio2.html
+++ b/portfolio2.html
@@ -12,18 +12,25 @@
 </head>
 <body>
     <div class="body">
-        <header class="header">
-            <nav>
-                <ul class="links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#c2">About</a></li>
-                    <li><a href="index.html#c3">Portfolio</a></li>
-<!--  Disabled
-                  <li><a href="index.html#c4">Clients</a></li>
--->
-                    <li><a href="index.html#c5">Contact</a></li>
-                </ul>
-            </nav>
+        <header>
+            <div class="header-fixed">
+                <label class="hamburger-menu">
+                    <input type="checkbox">
+                </label>
+                <aside class="sidebar">
+                    <nav>
+                        <ul class="links">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html#c2">About</a></li>
+                            <li><a href="index.html#c3">Portfolio</a></li>
+        <!--  Disabled
+                        <li><a href="index.html#c4">Clients</a></li>
+        -->
+                            <li><a href="index.html#c5">Contact</a></li>
+                        </ul>
+                    </nav>
+                </aside>
+            </div>
         </header>
         <main>
 <!--Title-->
