--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
 <body>
     <div class="body">
         <header>
-            <nav>
-                <ul class="links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#c3">Portfolio</a></li>
-                    <li><a href="#c2">About</a></li>                  
-<!--Disabled Temporarily                
-                    <li><a href="#c4">Clients</a></li> 
--->
-                    <li><a href="#c5">Contact</a></li>
-                </ul>
-            </nav>
+            <div class="header-fixed">
+                <label class="hamburger-menu">
+                    <input type="checkbox">
+                </label>
+                <aside class="sidebar">
+                    <nav>
+                        <ul class="links">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#c3">Portfolio</a></li>
+                            <li><a href="#c2">About</a></li>                  
+    <!--Disabled Temporarily                
+                            <li><a href="#c4">Clients</a></li> 
+    -->
+                            <li><a href="#c5">Contact</a></li>
+                        </ul>
+                    </nav>
+                </aside>
+            </div>
         </header>
         <main>
             <section class="splash">
@@ -145,7 +152,7 @@
 -->
             <section class="contact" id="c5">
                 <div>
-                    <h2 id="accent2">Need a commission?</h2>
+                    <h2 id="accent2">Want to work with me?</h2>
                     <p>
                         Send me and email.<br>
                         Glad to work with you!
